<resources>
    <string name="app_name">Travel Diary</string>
    <string name="e_mail">E-Mail</string>
    <string name="password">Password</string>
    <string name="save_location">Save Location</string>
    <string name="location_name">Location Name</string>
    <string name="add_item">Add Item</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="location_address">Address</string>
    <string name="location_date">Date</string>
    <string name="location_notes">Notes</string>
    <string name="save_changes">Save</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="insertimage">insertImage</string>
    <string name="image">image</string>
    <string name="location_image">Image</string>
    <string name="location_name_placeholder">Name</string>
    <string name="location_address_placeholder">Address</string>
    <string name="location_date_placeholder">Date</string>
    <string name="location_notes_placeholder">Notes</string>
    <string name="back">Back</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="welcome_nback">Welcome\nBack</string>
    <string name="are_you_a_new_user_register">Are you a new user? Register</string>
    <string name="name">Name</string>
    <string name="forgot_password">Forgot Password?</string>

    <string name="facebook_app_id">516268864284064</string>
    <string name="facebook_client_token">97bce0714ff2b2a3655c128d9ba6d7ca</string>


    <string name="your_web_client_id">430394962574-uvsbmt3l5e589cgfdbrrlk0ondtindke.apps.googleusercontent.com</string>
</resources>